--- a/src/components/widgets/styles/Footer.css
+++ b/src/components/widgets/styles/Footer.css
@@ -97,7 +97,7 @@ li{
 	}
 
 	.icon{
-		width: 6.6vw;
+		width: 40.5vw;
 	}
 
 	.items-0{
